# thumbconfig

./: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  tcfg_client.cpp  tcfg_client.hpp  tcfg_manager.cpp  tcfg_manager.hpp  tcfg_msc_dealer.cpp  tcfg_msc_dealer.hpp  tcfg_wire_interface.hpp  tcfg_wire_protocol.cpp  tcfg_wire_protocol.hpp  tcfg_wire_usb_cdc.cpp  tcfg_wire_usb_cdc.hpp  thumbcfg_msc_dealer.cpp  thumbcfg_msc_dealer.hpp
